# apollo_daoxianglake_demo

./: README.md  build_and_run.sh
demo_data/gt_pose_data/20190918143332/: vechicle_poses.txt
demo_data/image_data/20190918143332/front/: image_stamps.txt
demo_data/image_data/20190918143332/left_back/: image_stamps.txt
demo_data/image_data/20190918143332/right_back/: image_stamps.txt
demo_data/pcd_data/20190918143332/: 50000.pcd  50010.pcd  50030.pcd  50040.pcd  50050.pcd  50060.pcd  50070.pcd  50080.pcd  50090.pcd  50100.pcd  pcd_stamps.txt
src/: CMakeLists.txt  camera_model.cpp  camera_model.h  cloud_projector.cpp  cloud_projector.h  intrinsics.h  intrinsics_io.cpp  intrinsics_io.h  main.cpp  point_cloud.cpp  point_cloud.h  poses_interpolation.cpp  poses_interpolation.h  rendering_gflags.cpp  rendering_gflags.h  timestamp_loader.cpp  timestamp_loader.h  util.cpp  util.h
